# geo-harmonizer

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_source_catalog.py
backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  enums.py  main.py  models.py  schemas.py
backend/app/routers/: analyses.py  auth.py  health.py  imports.py  layers.py  logs.py  projects.py  sources.py  users.py
backend/app/services/: analysis_engine.py  analysis_runner.py  catalog_imports.py  events.py  imports.py
backend/tests/: test_analysis_engine.py  test_catalog_imports.py  test_import_helpers.py  test_validation.py
backend/tests/fixtures/: smoke.geojson
docs/: database-setup.md  research-context.md  source-catalog-research.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  HelpTooltip.test.tsx  HelpTooltip.tsx  MapView.tsx  SourceCatalog.tsx  api.ts  main.tsx  mapLayers.test.ts  mapLayers.ts  styles.css  types.ts
scripts/: check_source_catalog.py  create_admin.py  seed_demo_data.py
