[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "geoharmonizer-backend"
version = "0.1.0"
description = "Badawcze API GeoHarmonizer"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy>=2.0.36,<3",
  "alembic>=1.14,<2",
  "psycopg[binary]>=3.2,<4",
  "geoalchemy2>=0.16,<1",
  "pydantic-settings>=2.6,<3",
  "email-validator>=2.2,<3",
  "PyJWT>=2.10,<3",
  "argon2-cffi>=23.1,<26",
  "python-multipart>=0.0.18,<1",
  "shapely>=2.0.6,<3",
  "pyproj>=3.7,<4",
  "geopandas>=1.0,<2",
  "fiona>=1.10,<2",
  "httpx>=0.28,<1",
  "defusedxml>=0.7,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.8,<1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]
